k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: student-feedback
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: dockermajid/student-feedback-frontend:35fdd747c9596584ae78274b7cf5b55cc23d0029
          imagePullPolicy: Always
          ports:
            - containerPort: 80
